secure-serverless-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Initial resource setup for serverless security workshop

Parameters:
  DbPassword:
    Type: String
    NoEcho: true
  WorkshopDemoUserPassword:
    Type: String
    NoEcho: true
    Description: Console password for the ABAC demo IAM user (serverless-dev-user)
  IsWorkshopStudio:
    Type: String
    Default: "no"
    AllowedValues:
      - "no"
      - "yes"
  AssetBucketName:
    Description: Assets Bucket name
    Type: String
    Default: "None"
  AssetBucketPrefixName:
    Description: Assets Bucket prefix
    Type: String
    Default: "None"

Conditions:
  UsingWS: !Equals
    - !Ref IsWorkshopStudio
    - "yes"

  NoWS: !Equals
    - !Ref IsWorkshopStudio
    - "no"

Resources:
  PubPrivateVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Secure-Serverless

  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref PubPrivateVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: pub-subnet-1-Secure-Serverless

  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref PubPrivateVPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: pub-subnet-3-Secure-Serverless

  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref PubPrivateVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: priv-subnet-1-Secure-Serverless

  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref PubPrivateVPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: 10.0.4.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: priv-subnet-2-Secure-Serverless

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'

  GatewayToInternet:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref PubPrivateVPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref PubPrivateVPC

  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  NatGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt NatPublicIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatPublicIP:
    Type: "AWS::EC2::EIP"
    DependsOn: PubPrivateVPC
    Properties:
      Domain: vpc

  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref PubPrivateVPC

  PrivateRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  DeploymentsS3Bucket:
    Type: AWS::S3::Bucket

  AuroraSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: Subnet for Serverless Aurora
      DBSubnetGroupName: secure-serverless-aurora
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  AuroraSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Serverless Aurora Access through the VPC
      VpcId:
        Ref: PubPrivateVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 10.0.0.0/16

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for lambda function
      VpcId:
        Ref: PubPrivateVPC
      SecurityGroupEgress:
        - Description: Access to PostgreSQL in VPC (workshop Aurora or external RDS)
          FromPort: 5432
          IpProtocol: tcp
          CidrIp: 10.0.0.0/16
          ToPort: 5432
        - Description: Access to publicly reachable PostgreSQL via NAT (if required)
          FromPort: 5432
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          ToPort: 5432
        - Description: Access to Secrets Manager
          FromPort: 80
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          ToPort: 80
        - Description: Access to Secrets Manager SSL
          FromPort: 443
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          ToPort: 443
        - Description: Access to Secrets Manager SSL
          FromPort: 53
          IpProtocol: udp
          CidrIp: 0.0.0.0/0
          ToPort: 53

  ### Lambda IAM module - AccessAnalyzer
  CloudTrail:
    Type: 'AWS::CloudTrail::Trail'
    Properties:
      TrailName: Serverless-Security-Workshop-Trail
      S3BucketName: !Ref ServerlessSecurityAccessAnalyzerDemoBucket
      IsLogging: true
      EnableLogFileValidation: true
      IncludeGlobalServiceEvents: true
      EventSelectors:
        - DataResources:
            - Type: AWS::DynamoDB::Table
              Values:
                - 'arn:aws:dynamodb'
          IncludeManagementEvents: true
          ReadWriteType: All
    DependsOn: S3BucketPolicy

  ServerlessSecurityAccessAnalyzerDemoBucket:
    Type: 'AWS::S3::Bucket'
    Properties: { }

  S3BucketPolicy:
    Type: 'AWS::S3::BucketPolicy'
    Properties:
      Bucket:
        Ref: ServerlessSecurityAccessAnalyzerDemoBucket
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: 'AWSCloudTrailBucketPermissionsCheck'
            Effect: Allow
            Principal:
              Service:
                - cloudtrail.amazonaws.com
            Action: 's3:GetBucketAcl'
            Resource:
              'Fn::GetAtt':
                - ServerlessSecurityAccessAnalyzerDemoBucket
                - Arn
          - Sid: 'AWSConfigBucketDelivery'
            Effect: Allow
            Principal:
              Service:
                - cloudtrail.amazonaws.com
            Action: 's3:PutObject'
            Resource:
              'Fn::Join':
                - ''
                - - 'Fn::GetAtt':
                      - ServerlessSecurityAccessAnalyzerDemoBucket
                      - Arn
                  - /AWSLogs/*
            Condition:
              StringEquals:
                's3:x-amz-acl': bucket-owner-full-control
  #### Module AccessAnalyzer Resources Ends

  #### Lambda IAM Module ABAC/Permission Boundary Demo Starts
  ServerlessABACDemoRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              AWS:
                - !Sub "arn:aws:iam::${AWS::AccountId}:root"
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - !Ref ServerlessABACDemoPolicyLambdaInvoke
        - !Ref ServerlessABACDemoPolicyListLambdaIAM
      #   - !Ref ServerlessABACDemoPolicyPassRole

  ServerlessABACDemoPolicyLambdaInvoke:
    Type: 'AWS::IAM::ManagedPolicy'
    Properties:
      ManagedPolicyName: ServerlessABACDemoPolicyLambdaInvoke
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - 'lambda:InvokeFunction'
              - 'lambda:GetFunction'
            Resource: "arn:aws:lambda:*:*:function:*"
            Condition:
              StringEquals:
                "aws:RequestTag/application": "${aws:PrincipalTag/application}"
                "aws:ResourceTag/application": "${aws:PrincipalTag/application}"
              ForAllValues:StringEquals:
                "aws:TagKeys":
                  - application

  ServerlessABACDemoPolicyListLambdaIAM:
    Type: 'AWS::IAM::ManagedPolicy'
    Properties:
      ManagedPolicyName: ServerlessABACDemoPolicyListLambdaIAM
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - 'lambda:GetAccountSettings'
              - 'lambda:GetFunctionConfiguration'
              - 'lambda:CreateFunction'
              - 'lambda:DeleteFunction'
              - 'lambda:TagResource'
              - 'lambda:List*'
              - 'lambda:List*'
              - 'iam:List*' #may be move to it's own
              - 'iam:Get*'
              - 'cloudformation:DescribeStackResources'
              - 'cloudformation:ListStackResources'
              - 'kms:ListAliases'
              - 'tag:GetResources'
            Resource: "*" #start with the FineGrained
          #ServerlessABACDemoPolicyPassRole:
          # Type: 'AWS::IAM::ManagedPolicy'
          # Properties:
          #  PolicyDocument:
          #   Version: 2012-10-17
          #  Statement:
          #   - Effect: Allow
          #    Action:
          #     - "iam:PassRole"
          #  Resource: !Sub "arn:aws:iam::${AWS::AccountId}:role/Serverless-*"

  ServerlessPermissionBoundaryDemoIAMActionsPolicy:
    Type: 'AWS::IAM::ManagedPolicy'
    Properties:
      ManagedPolicyName: ServerlessPermissionBoundaryDemoIAMActionsPolicy
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: "IAMRoleWithBoundary"
            Effect: Allow
            Action:
              - "iam:CreateRole"
              - "iam:DeleteRole"
              - "iam:PutRolePolicy"
              - "iam:DeleteRolePolicy"
              - "iam:AttachRolePolicy"
              - "iam:CreatePolicy"
              - "iam:DeletePolicy"
              - "iam:SetDefaultPolicyVersion"
            Resource: !Sub "arn:aws:iam::${AWS::AccountId}:role/Serverless-*"
            Condition:
              ArnEquals:
                "iam:PermissionsBoundary": !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/ServerlessPermissionBoundaryDemoBoundaryPolicy"
          - Sid: "PassServerlessRoles"
            Effect: Allow
            Action:
              - "iam:PassRole"
            Resource: !Sub "arn:aws:iam::${AWS::AccountId}:role/Serverless-*"
  ServerlessPermissionBoundaryDemoBoundaryPolicy:
    Type: 'AWS::IAM::ManagedPolicy'
    Properties:
      ManagedPolicyName: ServerlessPermissionBoundaryDemoBoundaryPolicy
      Description: Permission boundary for developers
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - "dynamodb:ListTables"
              - "dynamodb:BatchGetItem"
              - "dynamodb:GetItem"
              - "dynamodb:GetRecords"
              - "dynamodb:PutItem"
              - "s3:GetObject"
              - "s3:ListBucket"
              - "s3:PutObject"
              - "logs:CreateLogGroup"
              - "logs:CreateLogStream"
              - "logs:DescribeLogGroups"
              - "logs:PutLogEvents"
              - "xray:Put*"
            Resource: "*"

  ABACTestUser:
    Type: AWS::IAM::User
    Properties:
      UserName: serverless-dev-user
      Policies:
        - PolicyName: lambda-access
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - sts:AssumeRole
                  - sts:TagSession
                Resource:
                  Fn::Sub: ${ServerlessABACDemoRole.Arn}
      LoginProfile:
        Password: !Ref WorkshopDemoUserPassword
        PasswordResetRequired: true

  #### Lambda IAM Module ABAC/Permission Boundary Demo Ends

  WorkshopGuardDuty:
    Type: AWS::GuardDuty::Detector
    Condition: UsingWS
    Properties:
      Enable: true

  WorkshopGuardDutyThreatList:
    Type: AWS::GuardDuty::ThreatIntelSet
    Condition: UsingWS
    Properties:
      Activate: true
      DetectorId: !Ref WorkshopGuardDuty
      Format: TXT
      Location: "https://ws-assets-prod-iad-r-iad-ed304a55c2ca1aee.s3.us-east-1.amazonaws.com/026f84fd-f589-4a59-a4d1-81dc543fcd30/threat-list.txt"
      Name: "traffic-simulation"

  TrafficSimulationRole:
    Type: AWS::IAM::Role
    Condition: UsingWS
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: trafficsimulation
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: '*'

  TrafficSimulation:
    Type: AWS::Lambda::Function
    Condition: UsingWS
    Properties:
      Runtime: python3.11
      Handler: index.lambda_handler
      FunctionName: "securing-serverless-TrafficSimulation"
      Role:
        Fn::GetAtt:
          - TrafficSimulationRole
          - Arn
      Code:
        ZipFile: |
          import http.client
          def lambda_handler(event, context):
              connection = http.client.HTTPSConnection('www.example.com')
              connection.request('GET', '/malicious')
          
              response = connection.getresponse()
              print(response.read().decode())
              return

Outputs:

  DeploymentS3Bucket:
    Description: S3 Bucket to place your SAM deployments
    Value: !Ref DeploymentsS3Bucket

  LambdaSecurityGroup:
    Description: SecurityGroup for lambda function
    Value: !Ref LambdaSecurityGroup
    Export:
      Name:
        Secure-Serverless-LambdaSecurityGroup

  VpcId:
    Description: VPC for Aurora
    Value: !Ref PubPrivateVPC
    Export:
      Name:
        Secure-Serverless-VPC-ID

  PublicSubnet1:
    Description: PublicSubnet1
    Value: !Ref PublicSubnet1
    Export:
      Name:
        Secure-Serverless-PublicSubnet1
  PublicSubnet2:
    Description: PublicSubnet2
    Value: !Ref PublicSubnet2
    Export:
      Name:
        Secure-Serverless-PublicSubnet2
  PrivateSubnet1:
    Description: PrivateSubnet1
    Value: !Ref PrivateSubnet1
    Export:
      Name:
        Secure-Serverless-PrivateSubnet1
  PrivateSubnet2:
    Description: PrivateSubnet2
    Value: !Ref PrivateSubnet2
    Export:
      Name:
        Secure-Serverless-PrivateSubnet2
